[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/CommonObjects/key-green.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Key.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sound/Key.mp3" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 66.0303

[sub_resource type="Animation" id=2]
resource_name = "Bounce"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -182 ), Vector2( 0, -54 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="Key" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bounce = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="SoundKey" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0

[connection signal="body_entered" from="." to="." method="_on_Key_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
